--- a/Style.css
+++ b/Style.css
@@ -186,3 +186,19 @@ a:hover span:nth-child(4) {
     border-radius: 50px;
     cursor: pointer;
 }
+#hidegrid {
+    margin-right: 80px;
+}
+#returngrids {
+    margin-left: 80px;
+}
+@media all and (max-width: 500px) {
+    #hidegrid {
+        margin-bottom: 40px;
+        margin-right: 0;
+    }
+    #returngrids {
+        margin-left: 0;
+        margin-top: 40px;
+    }
+}
